CP: add gc logging for all sign modules and upgrade sis-parent-pom to get newline fix for deploy info files